# equinox

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
include/: core.h  list.h  string.h  vector.h
src/core/: core.c
src/list/: ilist.c
src/string/: string.c
src/vector/: fvector.c  ivector.c  uvector.c
test/: main.c  test.h
test/list/: t_ilist.h
test/vector/: t_fvector.h  t_ivector.h  t_uvector.h
